14 de abril de 2016 Edwin Hastamorir Ajustes a los estilos css de emplvigenciascargos

--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -248,7 +248,8 @@
                                     </p:cellEditor>
                                     <f:facet name="footer">
                                         <p:commandButton style="width: 90px; left: 432px; margin: -14px; position: absolute ; height: 20px; border: none; color: blue" value="" id="footUn" 
-                                                         action="unidades" actionListener="#{controlUnidad.recibirPaginaEntrante('atrasConcepto')}" process="@this" />
+                                                         action="unidades" actionListener="#{controlUnidad.recibirPaginaEntrante('atrasConcepto')}" process="@this" 
+                                                         />
                                     </f:facet>
                                 </p:column> 
 
