--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -103,7 +103,7 @@
                             <a href="tel:+5717475043" target="_blank">
                                 <p:graphicImage value="Imagenes/Iconos/rs_pbx.png" alt="celular" style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
-                            <p:commandButton value="" style="background-image: url(Imagenes/Iconos/cerrarSesion.png); background-size: 100% 100%; background-repeat: no-repeat; width: 100px; height: 30px; position: absolute; left: 780px;" actionListener="#{controlTemplate.cerrarSession()}" />
+                            <p:commandButton value="" style="background-image: url(Imagenes/Iconos/cerrarSesion.png); background-size: 100% 100%; background-repeat: no-repeat; width: 100px; height: 30px; position: absolute; left: 780px; border: none;" actionListener="#{controlTemplate.cerrarSession()}" />
                         </div>
                     </h:form>
                 </ui:insert>
